# TelegramShop

./: .env  README.md  pyproject.toml  run.py
data/: shop.db
src/telegramshop/: __init__.py  __main__.py  config.py  database.py  keyboards.py  main.py  states.py  utils.py
src/telegramshop/handlers/: __init__.py  admin.py  info.py  profile.py  shop.py  start.py
